--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>React Sanfona Demo</title>
 </head>
 <body>
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
