--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>React Sanfona Demo</title>
+  <link href='http://fonts.googleapis.com/css?family=Nobile:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
