--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,8 @@
   <link href='http://fonts.googleapis.com/css?family=Nobile:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <!-- <script src="http://localhost:8080/webpack-dev-server.js"></script> -->
-  <!-- <script src="bundle.js"></script> -->
+  <script src="http://localhost:8080/webpack-dev-server.js"></script>
+  <script src="bundle.js"></script>
   
 </body>
 </html>
