--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,6 @@
 <body>
   <div id="demo"></div>
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
-  <script src="bundle.js"></script>
+  <script src="demo/bundle.js"></script>
 </body>
 </html>
