--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <link href='http://fonts.googleapis.com/css?family=Nobile:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
+  <div id="demo"></div>
   <script src="bundle.js"></script>
-
-
   <a href="https://github.com/daviferreira/react-sanfona" class="github-link"><img style="z-index: 100;position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 </body>
 </html>
