Use https on googlefonts url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>React Sanfona Demo</title>
-  <link href='http://fonts.googleapis.com/css?family=Nobile:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Nobile:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div id="demo"></div>
