--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>React Sanfona Demo</title>
-  <link href='https://fonts.googleapis.com/css?family=Nobile:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div id="demo"></div>
-  <script src="bundle.js"></script>
-  <a href="https://github.com/daviferreira/react-sanfona" class="github-link"><img style="z-index: 100;position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+  <script src="http://localhost:8080/webpack-dev-server.js"></script>
+  <script src="demo/bundle.js"></script>
 </body>
 </html>
